# OpticC

./: -  .env.example  .gitignore  Cargo.toml  ORIENTATION.md  QA_VERIFICATION.md  README.md  metadata.json  package-lock.json  package.json  patch.diff  print_ast.rs  run_ast.sh  test.c  test_atomics  test_atomics.c  test_clang  test_gcc  test_simple  test_simple.c  test_simple.txt  test_sqlite.c  test_sqlite.txt  test_sqlite_open  test_sqlite_open.c
.cargo/: config.toml
docs/: kernel-and-performance-roadmap.md
jules_prompts/: 00_protocol.md  01_orchestrator.md  02_memory_infra.md  02_squad_a.md  03_db_infra.md  03_squad_b.md  04_lexer_macro.md  04_squad_c.md  05_parser.md  05_squad_d.md  06_analysis.md  06_integration.md  07_backend_llvm.md  08_vfs_projection.md  09_integration.md  10_preprocessor.md  11_type_system.md  12_gnu_extensions.md  13_inline_asm.md  14_build_system.md  15_benchmark.md  example_spec.yaml  (+3 more)
optic_c/: Cargo.toml  QA_VERIFICATION.md  simple.ll  simple3.ll  sqlite  sqlite3.c  test5.ll  test6.ll  test7.ll  test_integration.sh
optic_c/.cargo/: config.toml
optic_c/.optic/spec/: analysis.yaml  backend_llvm.yaml  db_infra.yaml  lexer_macro.yaml  memory_infra.yaml  parser.yaml  vfs_projection.yaml
optic_c/.optic/tasks/: lexer_macro.md  parser.md  preprocessor.md  vfs_projection.md
optic_c/src/: arena.rs  db.rs  lib.rs  main.rs
optic_c/src/analysis/: alias.rs  mod.rs
optic_c/src/backend/: llvm.rs  mod.rs
optic_c/src/frontend/: lexer.rs  macro_expander.rs  mod.rs  parser.rs
optic_c/src/types/: mod.rs  resolve.rs
optic_c/src/vfs/: mod.rs
(+107 files in other folders)
