[package]
name = "optic_c"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.11.1"
clap = { version = "4.5", features = ["derive"] }
fuser = "0.17.0"
libc = "0.2"
memmap2 = "0.9.10"
redb = "4.0.0"
inkwell = { version = "0.9.0", features = ["llvm18-1-prefer-dynamic"] }
sha2 = "0.10"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "4.0"

[features]
network = ["ureq"]

[dependencies.ureq]
version = "2.10"
optional = true

[[bin]]
name = "optic_c"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "print_ast"
path = "print_ast.rs"

