[package]
name = "optic_c"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.1"
clap = { version = "4.5", features = ["derive"] }
fuser = "0.17.0"
libc = "0.2"
memmap2 = "0.9.10"
redb = "4.0.0"
inkwell = { version = "0.9.0", features = ["llvm14-0-prefer-dynamic"] }

[[bin]]
name = "optic_c"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.27.0"
